--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.55.0",
     "sequelize": "^2.0.5",
+    "sequelize-cli": "^1.6.0",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {},
