--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "request": "^2.55.0",
     "sequelize": "^2.0.5",
     "sequelize-cli": "^1.6.0",
+    "session": "^0.1.0",
     "socket.io": "^1.3.5"
   },
   "devDependencies": {},
