--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^3.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-session": "^1.11.1",
     "lodash": "^3.6.0",
     "method-override": "^2.3.2",
     "pg": "^4.3.0",
