--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "bcrypt": "^0.8.2",
     "body-parser": "^1.12.2",
-    "bootstrap": "^3.3.4",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
@@ -17,8 +16,7 @@
     "request": "^2.55.0",
     "sequelize": "^2.0.5",
     "sequelize-cli": "^1.6.0",
-    "session": "^0.1.0",
-    "socket.io": "^1.3.5"
+    "session": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
