--- a/config/config.json
+++ b/config/config.json
@@ -13,5 +13,6 @@
     "database": "fog_app_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
+    "use_env_variable": "HEROKU_POSTGRESQL_CRIMSON_URL"
   }
 }
